# murm386

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  adlib.c  build.sh  disk.h  disks-rp2350.c.inl  disks-win32.c.inl  flash.sh  fmopl.c  fmopl.h  i386.c  i386.h  i386_arm.h  i386ins.def  i8042.c  i8254.c  ide.c  kvm.c  kvm.h  main.c  memmap.mos2.ld  misc.c  misc.h  ne2000.c  pc.c  pc.h  pcspk.c  release.sh  sb16.c  simd.inc  vga.c  vga.h
.githooks/: commit-msg
386/: config.ini  fdd0.img
conf/: gray386.ini  jslinux.ini  win98.ini  winxp.ini
drivers/audio/: audio.c  audio.h  audio_i2s.pio
drivers/fatfs/: ff.c  ff.h
drivers/hdmi/: hdmi.c  hdmi.h
drivers/ps2kbd/: CMakeLists.txt  hid.h  ps2kbd_mrmltr.cpp  ps2kbd_mrmltr.h  ps2kbd_mrmltr2.pio  ps2kbd_wrapper.cpp  ps2kbd_wrapper.h
drivers/ps2mouse/: ps2mouse.c  ps2mouse.h
drivers/psram/: CMakeLists.txt  psram_init.c  psram_init.h
drivers/sdcard/: sdcard.h
drivers/usbhid/: CMakeLists.txt  hid_app.c  tusb_config.h  usbhid.h  usbkbd_wrapper.c  usbkbd_wrapper.h  usbmouse_wrapper.c  usbmouse_wrapper.h
drivers/vga/: CMakeLists.txt  font8x16.c  font8x16.h  test_pins.c  vga.c  vga.h  vga_hw.c  vga_hw.h  vga_hw_old.c  vga_osd.c  vga_osd.h
esp/: CMakeLists.txt  esp-idf.patch  partitions.csv  sdkconfig  sdkconfig.esp32p4  tiny386.ini
esp/main/: CMakeLists.txt  board_jc3248w535.h  board_jc4880p433.h  common.h  esp_main.c  i2s.c  idf_component.yml  lcd_axs15231b.c  lcd_st7701.c  storage.c  wifi.c
linuxstart/: Makefile  libc.c  libc.h  linuxstart.c  linuxstart_head.S
osd/: microui.c  microui.h  osd.c  osd.h
rawdraw/: CNFA.h  CNFA_alsa.c  CNFG.c  CNFG.h  CNFGWinDriver.c  CNFGXDriver.c  main.c  wifikbd.c
scripts/: build.sh  sdl.patch
scripts/slirp/: Makefile  glib.h  patch
sdcard/386/: config.ini
sdl/: main.c
seabios/: config  patch
src/: adlib.c  adlib.h  board_config.h  config_save.c  config_save.h  debug.h  disk.c  disk.h  disks-rp2350.c.inl  diskui.c  diskui.h  dss.c  dss.h  ems.c.inl  ems.h  fdd.c  fdd.h  fmopl.c  fmopl.h  fpu.c  general-midi.c.inl  i386.c  i386.h  i386_arm.S  i8042.c  i8042.h  i8254.c  i8257.c  i8259.c  ide.c  ide.h  main.c  misc.c  misc.h  mpu401.c.inl  netredirect.c  pc.c  pc.h  pci.c  pcspk.c  (+12 more)
src/emu8950/: emu8950.c  emu8950.h  slot_render.cpp
src/jit/: jit.h  jit_cache.c  jit_emit.c  jit_translate.c
tools/: initnet.c  wifikbd.c
wasm/: Makefile  main.c
wasm/html/: index.html  main.js
wasm/libc/: assert.h  ctype.h  errno.h  inttypes.h  libc.c  math.h  nanoprintf.h  stdarg.h  stddef.h  stdio.h  stdlib.h  string.h  time.h  unistd.h
